--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
     "url": "https://github.com/laggyluke/transplant.git"
   },
   "devDependencies": {
+    "bower": "^1.3.9",
     "browserify": "^5.11.0",
+    "browserify-shim": "^3.7.0",
     "gulp": "^3.8.7",
     "gulp-util": "^3.0.1",
-    "gulp-watch": "^0.7.0",
-    "react": "^0.11.1",
     "reactify": "^0.14.0",
     "underscore": "^1.7.0",
     "vinyl-source-stream": "^0.1.1",
     "watchify": "^1.0.2"
+  },
+  "browserify": {
+    "transform": [
+      "reactify",
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "jquery": "global:$",
+    "react": "global:React"
   }
 }
