--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bower": "^1.3.9",
     "browserify": "^5.11.0",
     "browserify-shim": "^3.7.0",
+    "es6ify": "^1.3.0",
     "gulp": "^3.8.7",
     "gulp-util": "^3.0.1",
     "reactify": "^0.14.0",
