--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "type": "git",
     "url": "https://github.com/laggyluke/transplant.git"
   },
+  "scripts": {
+    "bower-install": "bower install"
+  },
   "devDependencies": {
     "bower": "^1.3.9",
     "browserify": "^5.11.0",
