--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "transplant",
   "version": "0.0.0",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/laggyluke/transplant.git"
