--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "bower-install": "bower install",
-    "gulp-build": "gulp build"
+    "gulp-build": "gulp build",
+    "postinstall": "npm run bower-install && npm run gulp-build"
   },
   "devDependencies": {
     "bower": "^1.3.9",
